service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: test-service
spec:
  selector:
    app: ecommerce-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 80
